# lox-rust

./: .gitignore  .python-version  Cargo.toml  requirements.in  requirements.txt
.github/workflows/: test.yml
notebooks/: interp.ipynb  lexer.ipynb  parser.ipynb
src/: install.rs  jupyter.rs  main.rs  server.rs
src/lang/: env.rs  interp.rs  lexer.rs  mod.rs  parser.rs  reader.rs  scope.rs
