[package]
name = "lox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.33"
char_reader = "0.1.1"
chrono = "0.4.19"
dirs = "4.0.0"
generic-array = "0.14.4"
hex = "0.4.2"
hmac = "0.12.0"
json = "0.12.4"
lazy_static = "1.4.0"
sha2 = "0.10.0"
unicode-general-category = "0.5.1"
unicode-normalization = "0.1.19"
uuid = { version = "0.8.1", features = [ "v4" ] }
zmq = { version = "0.9.1", default-features = false }

[features]
default = ["vendored-zmq"]
vendored-zmq = ["zmq/vendored"]
